<resources>
    <string name="app_name">PennyWise</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="more">See More</string>
    <string name="recent">Recent Transactions</string>
    <string name="name">Name</string>
    <string name="create_text">Create</string>
    <string name="target_amount">Target Amount</string>
    <string name="current_amount">Current Amount (optional)</string>
    <string name="contribution_amount">Contribution Amount</string>
    <string name="contribution_type">Contribution Type</string>
    <string name="deadline">Deadline (optional)</string>
    <string name="edit_goals">Edit Goals</string>
    <string name="log_out">Log out</string>
    <string name="category">Categories</string>
    <string name="investment">Investments</string>
    <string name="account">Account</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="goals">Goals</string>
    <string name="system">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="tagline">Smart Budgeting Made Easy</string>
    <string name="fingerprint_icon" />

    <string name="signup_redirect">
        <font>Don’t have an account? </font>
        <font color="#007BFF">sign up</font>
    </string>

    <string name="signin_redirect">
        <font>Already have an account? </font>
        <font color="#007BFF">sign in</font>
    </string>

    <string name="biometric">Sign in with fingerprint</string>

    <string name="welcome">
        <font>Welcome to </font>
        <font color="#007BFF">PennyWise</font>
    </string>
    <string name="color_label">Color</string>
    <string name="icon_label">Icon</string>
    <string name="icon_selection">Select an icon</string>
    <string name="type">Transaction Type</string>
    <string name="recurring">Recurring?</string>
    <string name="amount">Amount</string>
    <string name="category_label">Category</string>
    <string name="category_selection">Select a category</string>
    <string name="error_icon">message image</string>
    <string name="week">week</string>
    <string name="monthly">month</string>
    <string name="google">Sign in with google</string>
    <string name="update_text">Update</string>
    <string name="selected_language">Selected language</string>
    <string name="show_results">Show results</string>
    <string name="default_web_client_id">577849445889-0bk53jvg92vut6tiqn0tkgomueu67bg3.apps.googleusercontent.com</string>
    <string name="password">Password</string>
    <string name="delete_text">Delete</string>
    <string name="cancel_text">Cancel</string>
    <string name="notification">Notifications</string>


    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="categories">Categories</string>
    <string name="security">Security</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="transactions">Transactions</string>
    <string name="profile">Profile</string>

    <string name="connecting">Connecting…</string>


    <string name="category_created">New Category Created</string>
    <string name="goal_created">New Goal Created</string>
    <string name="transaction_created">New Transaction Created</string>


    <string name="enter_category_name">• Enter a category name</string>
    <string name="enter_transaction_type">• Select a transaction type</string>
    <string name="enter_category_color">• Select a category color</string>
    <string name="icon_selection1">• Select a category icon</string>

    <string name="enter_goal_name">• Enter a goal name</string>
    <string name="enter_target_amount">• Enter a target amount</string>
    <string name="enter_contribution_type">• Select a contribution type</string>
    <string name="enter_contribution_amount">• Enter a contribution amount</string>

    <string name="enter_transaction_name">• Enter a transaction name</string>
    <string name="enter_transaction_amount">• Enter a transaction amount</string>
    <string name="enter_category">• Select a category</string>


    <string name="already_in_use">The email address is already in use by another account!</string>
    <string name="profile_update_successful">Profile update successful!</string>
    <string name="password_update_successful">Password update successful!</string>
    <string name="password_update_failed">Password update failed!</string>
    <string name="confirm_password_not_match">Confirm new password does not match\"</string>
    <string name="fetch_analytics">Fetching analytics...</string>
    <string name="analytics_update_successful">Analytics update successful!</string>
    <string name="analytics_update_fail">Analytics update failed!</string>
    <string name="fetch_categories">fetching categories...</string>

    <string name="create_category_fail">Category created failed!</string>
    <string name="create_category_successful">Category created successfully!</string>

    <string name="create_transaction_fail">Transaction creation failed!</string>
    <string name="create_transaction_successful">Transaction creation successful!</string>

    <string name="create_goal_fail">Goal creation failed!</string>
    <string name="create_goal_successful">Goal created successfully!</string>


    <string name="update_category_fail">Category update failed!</string>
    <string name="update_category_successful">Category successfully updated!</string>


    <string name="update_transaction_fail">Transaction update failed!</string>
    <string name="update_transaction_successful">Transaction successful updated!</string>

    <string name="update_goal_fail">Goal update failed!</string>
    <string name="update_goal_successful">Goal successfully updated!</string>


    <string name="category_retrieval_successful">Categories retrieved successfully!</string>
    <string name="category_retrieval_fail">Category retrieval failed!</string>
    <string name="creating_category">Creating Category...</string>
    <string name="details">Details</string>


    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="change_password">Change password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="are_you_sure_you_want_to_delete_nthis_item">Are you sure you want to delete \nthis item?</string>
    <string name="all">All</string>
    <string name="expenses">Expenses</string>
    <string name="enter_category_name1">Enter category name</string>
    <string name="select_a_question">Select a question</string>
    <string name="enter_transaction_type1">Select transaction type</string>
    <string name="enter_goal_name1">Enter goal name</string>
    <string name="enter_target_amount1">Enter target amount</string>
    <string name="enter_current_amount1">Enter current amount</string>
    <string name="enter_contribution_amount1">Enter contribution amount</string>
    <string name="enter_tranaction_name">Enter tranaction name</string>
    <string name="select_a_type">Select a type</string>
    <string name="enter_amount">Enter amount</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="total_goal_amount">Total goal amount</string>
    <string name="net_balance">Net Balance</string>
    <string name="select_a_language">Select a language</string>
    <string name="transaction">Transaction</string>
    <string name="notify_after_every_purchase">Notify after every purchase</string>
    <string name="notify_at_25_50_and_75_progress">Notify at 25%, 50%, and 75% progress</string>
    <string name="alert_when_goal_is_reached">Alert when goal is reached</string>
    <string name="notify_when_profile_is_updated">Notify when profile is updated</string>
    <string name="alert_for_new_logins_or_failed_attempts">Alert for new logins or failed attempts</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="theme_appearance">Theme/Appearance</string>
    <string name="total_balance">Total Balance</string>
    <string name="name_a_to_z">Name (A to Z)</string>
    <string name="name_z_to_a">Name (Z to A)</string>
    <string name="date_ascending">Date (ascending)</string>
    <string name="date_descending">Date (descending)</string>
    <string name="amount_high_to_low">Amount: High to Low</string>
    <string name="amount_low_to_high">Amount: Low to High</string>


    <string name="something_went_wrong">Something went wrong...</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_fail">Login unsuccessful!</string>
    <string name="empty_email">• Email cannot be empty.</string>
    <string name="invalid_email_format">• Invalid email format.</string>
    <string name="blank_password">• Password cannot be empty.</string>
    <string name="empty_username">• Username cannot be empty.</string>
    <string name="registration_failed">Registration unsuccessful!</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="user_exists">User already exists!</string>


    <string name="search">Search for a stock</string>
    <string name="buy_text">Buy</string>
    <string name="sell_text">Sell</string>
    <string name="stock">Stock</string>
    <string name="market">Market</string>

    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="enter_a_quantity">• Enter a quantity</string>
    <string name="int_quantity">• Quantity must be an integer</string>


    <string name="more_or_equal_zero">• Quantity must be zero or more.</string>
    <string name="more_than_owned">• Quantity exceeds the amount you own.</string>
    <string name="recurring_payment">Recurring payment</string>
    <string name="one_time_payment">One-time payment</string>
    <string name="stock_price">Stock Price</string>
    <string name="no_deadline">No deadline</string>
    <string name="connection_timeout">Connection timed out. Please check your connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="connection_timeout_lbl">Connection Timeout</string>
    <string name="one_year">1 Year</string>
    <string name="three_months">3 Months</string>
    <string name="six_months">6 Months</string>
    <string name="stock_not_owned">Stock Not Owned</string>
    <string name="ok">OK</string>
    <string name="dont_own">You don\'t own this stock.</string>
    <string name="stock_sold">Stock sold successfully</string>
    <string name="create_category_failed">Failed to create category. Please try again.</string>
    <string name="create_goal_failed">Failed to create goal. Please try again.</string>
    <string name="create_transaction_failed">Failed to create transaction. Please try again.</string>
    <string name="portfolio">Portfolio</string>

</resources>