<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/baseline_folder_24"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_goal"
            android:icon="@drawable/baseline_flag_24"
            android:title="@string/goals" />

        <item
            android:id="@+id/nav_investment"
            android:icon="@drawable/baseline_show_chart_24"
            android:title="@string/investment" />

    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/log_out">

            </item>
        </menu>
    </item>
</menu>