<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/closeView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_close_24"
             />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:fontFamily="@font/inter_medium"
        android:textSize="28sp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:textColor="?attr/darkerTitle"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/inter_medium"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_password"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/inter_medium"/>


    <!-- Email Label and Container -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:fontFamily="@font/inter_medium"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:hint="@string/confirm_password"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/inter_medium"/>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/add_button_background"
        android:text="@string/save"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/white"
        android:textSize="24sp"/>


</LinearLayout>