<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardPreventCornerOverlap="true"
    android:elevation="2dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp"
        android:background="@drawable/dialog_background">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_delete_outline_24"
            app:tint="@color/red"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"/>

        <!-- Message Text -->
        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_delete_nthis_item"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_bold" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="'item'"
            android:textSize="13sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/light_grey" />

        <!-- Buttons Container -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Cancel Button -->
            <LinearLayout
                android:id="@+id/cancelButton"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/cancel_button_background"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_text"
                    android:textSize="10sp" />
            </LinearLayout>

            <!-- Confirm Button -->
            <LinearLayout
                android:id="@+id/confirmButton"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/confirm_button_background"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_text"
                    android:textSize="10sp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
